--- a/listForPhone/css/index.css
+++ b/listForPhone/css/index.css
@@ -6,8 +6,9 @@
 }
 html,body{
     width: 100%;
-    height: 100%;
-    background: url("../imgs/1.jpg");
+    /*height: 100%;*/
+    background: url("../imgs/1.jpg") no-repeat center;
+    background-size:100% 1500px;
 }
 header{
     width: 100%;
@@ -33,14 +34,14 @@ main{
     margin-top: 1.2rem;
     width: 100%;
     height: 2.8rem;
-    padding: 0 0.3rem;
+    padding: 0.5rem 0.3rem;
     display: flex;
     justify-content:space-between;
 }
 main div{
      width: 1.31rem;
      height: 2.8rem;
-     padding-top: 0.5rem;
+     padding-top: 0.6rem;
  }
 .img{
     width: 1.31rem;
@@ -48,10 +49,25 @@ main div{
     border-radius: 1rem;
     position: relative;
     background: #fff;
-    font-size: .18rem;
+    font-size: 14px;
     text-align: center;
     color: #fff;
-    line-height: 0.5rem;
+    position: relative;
+}
+.img1 span{
+    position: absolute;
+    top:.08rem;
+    left:.1rem;
+}
+.img2 span{
+    position: absolute;
+    top:.08rem;
+    left:.2rem;
+}
+.img3 span{
+    position: absolute;
+    top:.08rem;
+    left:.2rem;
 }
 .img1{
     background: red;
@@ -73,11 +89,7 @@ main div p{
     display: block;
     margin-top: 0;
 }
-footer{
-    margin-top: 0;
-    width: 680px;
-    height: 800px;
-}
+/*da*/
  .container{
     width: 6.8rem;
     height: 6rem;
@@ -85,9 +97,8 @@ footer{
     background: #fff;
     position: absolute;
     left: 0;
-    top: 6.2rem;
+    top: 4rem;
     right: 0;
-    bottom: 0;
     margin: auto;
     border-radius: 20px;
     box-shadow: 0 0 15px rgba(225,225,225,0.75),0 1px 0 0 #000,0 2px 0 0 #000,0 3px 0 0 #fff,0 4px;
@@ -98,15 +109,15 @@ footer{
 }
 .add h3{
     text-align: center;
-    font-size: 40px;
+    font-size: 18px;
     font-family: "苹方", "微软雅黑", "Helvetica";
     font-weight: 600;
     margin-top: 0.2rem;
 }
 .close{
     position: absolute;
-    top: 0.15rem;
-    right: 0.7rem;
+    top: -0.2rem;
+    right: 0.2rem;
     margin: auto;
     font-size: 50px;
 }
@@ -130,44 +141,44 @@ footer{
     right: 0.12rem;
     bottom: 0.15rem;
     margin: auto;
-    font-size: 30px;
+    font-size: 18px;
     color: #b5b5b5;
 }
 .anniu{
-    width: 1.2rem;
-    height: 0.45rem;
+    width: 2rem;
+    height: 0.6rem;
     margin: 0 auto;
     background:red ;
     color: #fff;
     border-radius: 1rem;
-    font-size: 26px;
+    font-size: 14px;
     font-family: "苹方", "微软雅黑", "Helvetica";
     text-align: center;
-    line-height: 0.45rem;
+    line-height: 0.6rem;
 }
 .anniu1{
     width: 2rem;
-    height: 0.45rem;
+    height: 0.6rem;
     margin: 0.2rem auto 0;
     background:#1C1DFF ;
     color: #fff;
     border-radius: 1rem;
-    font-size: 26px;
+    font-size: 14px;
     font-family: "苹方", "微软雅黑", "Helvetica";
     text-align: center;
-    line-height: 0.45rem;
+    line-height: 0.6rem;
 }
 .anniu2{
-    width: 1.2rem;
-    height: 0.45rem;
+    width: 2rem;
+    height: 0.6rem;
     margin: 0.2rem auto 0;
     background:#008000 ;
     color: #fff;
     border-radius: 1rem;
-    font-size: 26px;
+    font-size: 14px;
     font-family: "苹方", "微软雅黑", "Helvetica";
     text-align: center;
-    line-height: 0.45rem;
+    line-height: 0.6rem;
 }
 .wait,.done{
     width: 100%;
@@ -176,14 +187,14 @@ footer{
 }
 .done h3{
     text-align: center;
-    font-size: 40px;
+    font-size: 18px;
     font-family: "苹方", "微软雅黑", "Helvetica";
     font-weight: 600;
     margin-top: 0.2rem;
 }
 .wait h3{
     text-align: center;
-    font-size: 40px;
+    font-size: 18px;
     font-family: "苹方", "微软雅黑", "Helvetica";
     font-weight: 600;
     margin-top: 0.2rem;
@@ -242,5 +253,4 @@ footer{
 .active{
     color: red;
 }
-
 
